--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,3 +49,34 @@ jobs:
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+
+      - name: Update GitOps repository
+        shell: bash
+        env:
+          GIT_TOKEN: ${{ secrets.GITOPS_PAT }}
+        run: |
+          # Configure git credential store
+          git config --global credential.helper store
+          echo "https://${GIT_TOKEN}:x-oauth-basic@github.com" > ~/.git-credentials
+          
+          # Remove any existing gitops directory
+          # rm -rf gitops
+          
+          # Clone repository using HTTPS URL without token
+          git clone https://github.com/cappymayor/argo-repo-demo.git argo-repo-demo
+          cd argo-repo-demo/argo-path
+          
+          if [[ "$OSTYPE" == "darwin"* ]]; then
+            sed -i '' "s|image: gcr.io/google-samples/gb-frontend:.*|image: 049417293525.dkr.ecr.eu-central-1.amazonaws.com/airflow:${{ github.sha }}|g" deployment.yaml
+          else
+            sed -i "s|image: gcr.io/google-samples/gb-frontend:.*|image: 049417293525.dkr.ecr.eu-central-1.amazonaws.com/airflow:${{ github.sha }}|g" deployment.yaml
+          fi
+          
+          # Commit changes
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add deployment.yaml
+          git commit -m "Update image to ${{ github.sha }}"
+          
+          # Push
+          git push -f https://${GIT_TOKEN}@github.com/rslim087a/grade-api-gitops.git main
