--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -79,4 +79,4 @@ jobs:
           git commit -m "Update image to ${{ github.sha }}"
           
           # Push
-          git push -f https://${GIT_TOKEN}@github.com/rslim087a/grade-api-gitops.git main
+          git push -f https://${GIT_TOKEN}@https://github.com/cappymayor/argo-repo-demo.git master
