--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,9 +1,7 @@
 name: CI pipeline
 
 on:
-  push:
-    branches:
-      - "**" 
+  pull_request:
     paths:
       - '**.py'
       
@@ -11,7 +9,6 @@ jobs:
   lint:
     name: checkout
     runs-on: ubuntu-24.04
-
     # if: ${{ github.event_name == 'pull_request' }}
     steps:
       - name: checkout
