--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Build, tag, and push docker image to Amazon ECR
         env:
-          REGISTRY: 049417293525.dkr.ecr.eu-central-1.amazonaws.com1111
+          REGISTRY: 049417293525.dkr.ecr.eu-central-1.amazonaws.com
           REPOSITORY: airflow
           IMAGE_TAG: version-${{ github.sha }}
         run: |
