--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -48,7 +48,7 @@ jobs:
           
           # Clone repository using HTTPS URL without token
           git clone https://github.com/Federated-Engineers/kubernetes-deployments.git kubernetes-deployments
-          cd kubernetes-deployments/blob/main/applications/production-values/
+          cd kubernetes-deployments/applications/production-values/
           
           if [[ "$OSTYPE" == "darwin"* ]]; then
             sed -i '' "s|tag: version-.*|tag: version-${{ github.sha }}|g" elite-airflow-values.yaml
@@ -59,7 +59,7 @@ jobs:
           # Commit changes
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add values.yaml
+          git add elite-airflow-values.yaml
           git commit -m "Update image to version-${{ github.sha }}"
           
           # Push
